workspace = { members = ["test_utils"] }
[package]
name = "contest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"
test_utils = { path = "test_utils" }

[[bench]]
name = "contest"
harness = false
