[package]
name = "contest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"
image = "0.25.0"
imageproc = "0.24.0"
test_utils = { path = "test_utils" }
palette = "0.7.0"
[[bench]]
name = "contest"
harness = false
